<resources>
    <string name="app_name">AppMarket</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="login_title">Iniciar Sesion</string>
    <string name="hintUsername">Ingrese su correo</string>
    <string name="helperUsername">*Requerido</string>
    <string name="hintPassword">Ingrese su contraseña</string>
    <string name="btn_login">Ingresar</string>
    <string name="login_tag">Conoce nuestros productos</string>
    <string name="tag_remember">Recordar mi cuenta</string>
    <string name="create_account">Crear cuenta</string>
    <string name="forget_password">Olvide mi contraseña</string>
    <string name="register_names">Ingrese sus nombres</string>
    <string name="register_lastname">Ingrese sus apellidos</string>
    <string name="register_email">Ingrese su correo</string>
    <string name="register_cellphone">Ingrese su celular</string>
    <string name="register_document">Ingrese su documento</string>
    <string name="register_password">Ingrese su clave</string>
    <string name="register_button">Registar</string>
</resources>